--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ title: Home | Kodular
 							<br>
 							Try it if you want something like Android Studio
 						</p>
-						<a target="_blank" href="https://ide.kodular.io" class="btn btn-pink btn-md">Start Now
+						<a target="_blank" href="https://ide.techmiras.me/" class="btn btn-pink btn-md">Start Now
 							<i class="fa fa-play ml-2"></i>
 						</a>
 					</div>
@@ -124,7 +124,7 @@ title: Home | Kodular
 						<h4 class="card-title">Kodular Store</h4>
 						<p class="card-text">Share your apps, projects, extensions and screens in this free Store developed by Kodular
 							Team!</p>
-						<a target="_blank" href="https://store.kodular.io" class="btn btn-pink btn-md">Start Now
+						<a target="_blank" href="https://store.techmiras.me/" class="btn btn-pink btn-md">Start Now
 							<i class="fa fa-play ml-2"></i>
 						</a>
 					</div>
@@ -146,7 +146,7 @@ title: Home | Kodular
 							<br>
 							You can see and control the data we have about you there
 						</p>
-						<a target="_blank" href="https://account.kodular.io" class="btn btn-pink btn-md">Start Now
+						<a target="_blank" href="https://account.techmiras.me/" class="btn btn-pink btn-md">Start Now
 							<i class="fa fa-play ml-2"></i>
 						</a>
 					</div>
